# AudioFocus

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: windows-ci.yml
docs/: architecture.md  build.md
src/: app.rs  com.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  media_events.rs  media_source.rs  process.rs  registry.rs  shutdown.rs  wasapi.rs
src/arbitration/: debounce.rs  decision.rs  engine.rs  loop_guard.rs  mod.rs  ownership.rs  state.rs  suppression.rs
src/hardening/: diagnostics.rs  mod.rs  panic.rs  recovery.rs  storm.rs  stress.rs  watchdog.rs
src/identity/: identity_manager.rs  mod.rs  process_inspector.rs  session_reconciler.rs  source_classifier.rs  source_registry.rs  stale_source_collector.rs  system.rs
src/non_smtc/: dispatcher.rs  mod.rs  retry_coordinator.rs  validation.rs  window_discovery.rs  window_filtering.rs
src/smtc/: controller.rs  manager.rs  mod.rs  translate.rs  watcher.rs
src/tray/: icons.rs  manager.rs  menu.rs  mod.rs  runtime.rs  single_instance.rs
tests/: registry_tests.rs
