[package]
name = "audiofocus"
version = "0.1.0"
edition = "2021"
description = "Windows audio session monitor for AudioFocus"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3.4"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media",
    "Media_Control",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
